style.css
#grid-container{
    display: grid;
    width: 100%;
    height: 100vh;
    grid-template-rows: repeat(6, 1fr);
    grid-template-columns: repeat(6, 1fr);
    grid-template-areas: 
      "side-navbar top-navbar top-navbar top-navbar top-navbar top-navbar"
      "side-navbar content-grid-container content-grid-container content-grid-container content-grid-container content-grid-container "
      "side-navbar content-grid-container content-grid-container content-grid-container content-grid-container content-grid-container"
      "side-navbar content-grid-container content-grid-container content-grid-container content-grid-container content-grid-container"
      "side-navbar content-grid-container content-grid-container content-grid-container content-grid-container content-grid-container"
      "side-navbar content-grid-container content-grid-container content-grid-container content-grid-container content-grid-container"
        ;
    
}

#side-navbar{
    grid-area: side-navbar;
    background-color: rgb(45, 124, 214);
    border: black solid;
    padding: 20px 50px;
    color: white;
    font-weight: bold;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

#side-navbar-title{
    font-size: 30px;
    flex-grow: 1;
}

#menu-1{
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    gap: 20px;
}

#menu-2{
    flex-grow: 6;
    display: flex;
    flex-direction: column;
    gap: 20px;
    margin-top: 20px;
}

#top-navbar{
    grid-area: top-navbar;
    padding: 30px;
    display: flex;
    justify-content: space-between;
    gap:30px;
}

#top-navbar-flex-1{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-left: 100px;
    
}

#top-navbar-flex-2{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

#searchbar{
    width: 100%;
    border-radius: 12px;
}
#greeting { 
    font-size: 25px;
}

#name{
    font-size: 20px;
}
#button-container{
    display:flex;
    gap: 40px;
    
}
.button-container-buttons{
    width: 100px;
    height: 30px;
    border-radius: 18px;
    font-size: 15px;
    font-weight: 900;
    background-color: rgb(45, 124, 214);
    color: white
}

#content-grid-container{
    grid-area: content-grid-container;
    background-color: rgb(227, 232, 241);
    display: grid;
    grid-template-rows: 50px, repeat(11, 1fr);
    grid-template-columns: repeat(3, 1fr);
    grid-template-areas: 
    "left-card-title . right-card-title"
    "card-1 card-4 card-7"
    "card-1 card-4 card-7" 
    "card-1 card-4 card-7" 
    " .     .      card-7" 
    "card-2 card-5 card-7"
    "card-2 card-5 .     "
    "card-2 card-5 card-8"
    " .     .      card-8" 
    "card-3 card-6 card-8"
    "card-3 card-6 card-8"
    "card-3 card-6 card-8"
   

    ;
}

.cards{
    margin: 5px 30px;
    padding: 30px;
    border: black solid 1px;
    border-left: goldenrod solid 10px;
    box-shadow: rgba(211, 206, 206, 0.774) 0px 3px;
    background-color: white;
}

#left-card-title {
    grid-area: left-card-title;
    margin-left: 30px;
}

#right-card-title{
    grid-area: right-card-title;
    margin-left:30px;
}

#card-1{ 
    grid-area: card-1;
}

#card-2{ 
    grid-area: card-2;
}

#card-3{ 
    grid-area: card-3;
}

#card-4{
    grid-area: card-4;
}

#card-5{ 
    grid-area: card-5;
}

#card-6{ 
    grid-area: card-6;
}

#card-7{ 
    grid-area: card-7;
}

#card-8{ 
    grid-area: card-8;
}

